# gaia-agentbeats

./: .env.example  .gitignore  AGENTBEATS_QUICKSTART.md  DEPLOYMENT_CHECKLIST_OFFICIAL.md  Dockerfile  Dockerfile.gaia-evaluator  Dockerfile.gaia-executor  LEADERBOARD_IMPLEMENTATION.txt  LEADERBOARD_README.md  LEADERBOARD_REFRESH_ERROR.md  OFFICIAL_AGENTBEATS_SUMMARY.md  PUSH_FIRST_RESULT.md  QUERY_VARIANTS.md  README.md  RUN_SCENARIO_GUIDE.md  WEBHOOK_SETUP_DETAILED.md  WEBHOOK_SETUP_VERIFICATION.md  agent.yaml  agent.yml  agentbeats_leaderboard.db  agentbeats_queries.json  create_duckdb.py  docker-compose.yml  entrypoint.sh  evaluation_results.csv  evaluation_results.db  evaluation_results.parquet  export_csv.py  export_parquet.py  generate_compose.py  import_results.py  init_evaluation_db.sql  leaderboard.duckdb  leaderboard_config.json  main.py  pyproject.toml  requirements.txt  scenario.toml  test_submission.py
.github/workflows/: assessment.yml
.scenario/: green_agent_card.toml  purple_agent_card.toml  scenario.toml
docs/: AGENTBEATS_OFFICIAL_SETUP.md  ARCHITECTURE_COMPARISON.md  DEPLOYMENT_CHECKLIST.md  DUCKDB_LEADERBOARD_QUERIES.md  IMPLEMENTATION_SUMMARY.md  LEADERBOARD_QUICK_REF.md  LEADERBOARD_SETUP.md  OFFICIAL_AGENTBEATS_MIGRATION.md  README.md  WEBHOOK_EXAMPLES.md
results/: gaia-result-20260116-123456.json  gaia-result-test-dummy.json
scripts/: setup_db.py
src/: __init__.py  launcher.py  leaderboard_api.py
src/agentbeats/: database.py  github_webhook.py
src/agentbeats_gaia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+11 files in other folders)
